# Tris

./: CMakeLists.txt
include/: Constants.hpp  Enums.hpp  Game.hpp  Grid.hpp  Griglia.hpp  Renderer.hpp
src/: AI.cpp  Game.cpp  Grid.cpp  Renderer.cpp
